updated the file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "food-verse",
+  "homepage":"https://sandhu656.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
